# stl2step

./: Cargo.toml  README.md
assets/samples/: tetrahedron.ply  tetrahedron.stl
crates/brep/: Cargo.toml
crates/brep/src/: lib.rs
crates/fit/: Cargo.toml
crates/fit/src/: lib.rs
crates/geom-core/: Cargo.toml
crates/geom-core/src/: lib.rs
crates/mesh-io/: Cargo.toml
crates/mesh-io/src/: lib.rs
crates/mode-a/: Cargo.toml
crates/mode-a/src/: lib.rs
crates/occt-bridge/: Cargo.toml
crates/occt-bridge/src/: lib.rs
crates/step-writer/: Cargo.toml
crates/step-writer/src/: lib.rs
crates/stl2step/: Cargo.toml
crates/stl2step/src/: main.rs
crates/stl2step/tests/: resources_suite.rs  smoke.rs
docs/: THIRD_PARTY.md  spec.md
docs/specs/: architecture.md  cli.md  milestones.md  open-questions.md  packaging.md  performance.md  pipelines.md  product.md  risks.md
tests/resources/: hole_poly.step  hole_poly.stl  multi_hole_multi_poly.step  multi_hole_multi_poly.stl  multi_poly.step  multi_poly.stl  simple_poly.step  simple_poly.stl
