[package]
name = "fit"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
geom-core = { path = "../geom-core" }
mesh-io = { path = "../mesh-io" }
nalgebra = { workspace = true }
