[package]
name = "step-writer"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
brep = { path = "../brep" }
mesh-io = { path = "../mesh-io" }

[dev-dependencies]
tempfile = { workspace = true }
